--- a/Fomalhaut2/Base.lproj/Main.storyboard
+++ b/Fomalhaut2/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17505"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -632,6 +631,38 @@
                                     </items>
                                 </menu>
                             </menuItem>
+                            <menuItem title="Control" id="Gea-YN-LE0">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Control" id="cPN-Id-qDc">
+                                    <items>
+                                        <menuItem title="Forward" keyEquivalent=" " id="e8Q-9B-UHb">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="forwardPage:" target="Ady-hI-5gd" id="Ni2-H5-Hlk"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="Back" keyEquivalent=" " id="wlJ-Aw-yaP">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES"/>
+                                            <connections>
+                                                <action selector="backwardPage:" target="Ady-hI-5gd" id="9LU-Pm-I9x"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem isSeparatorItem="YES" id="xuq-NI-5um"/>
+                                        <menuItem title="Forward One Page" id="xGb-Mg-P4o">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="forwardSinglePage:" target="Ady-hI-5gd" id="Ffy-I7-RZW"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="Backward One Page" id="g9T-PR-SEJ">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="backwardSinglePage:" target="Ady-hI-5gd" id="131-sS-Jab"/>
+                                            </connections>
+                                        </menuItem>
+                                    </items>
+                                </menu>
+                            </menuItem>
                             <menuItem title="Window" id="aUF-d1-5bR">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
@@ -680,80 +711,6 @@
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
-        </scene>
-        <!--Window Controller-->
-        <scene sceneID="R2V-B0-nI4">
-            <objects>
-                <windowController storyboardIdentifier="Document Window Controller" id="jGA-0Y-lOj" customClass="BookWindowController" customModule="Fomalhaut2" customModuleProvider="target" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" id="Ckk-yw-fiv">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <connections>
-                            <outlet property="delegate" destination="jGA-0Y-lOj" id="98r-iN-zZc"/>
-                        </connections>
-                    </window>
-                    <connections>
-                        <segue destination="tuV-Jq-4ua" kind="relationship" relationship="window.shadowedContentViewController" id="pI5-r0-bSI"/>
-                    </connections>
-                </windowController>
-                <customObject id="6f7-a7-6o1" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="75" y="250"/>
-        </scene>
-        <!--Spread Page View Controller-->
-        <scene sceneID="r1N-n7-y7r">
-            <objects>
-                <viewController id="tuV-Jq-4ua" customClass="SpreadPageViewController" customModule="Fomalhaut2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="ruz-a8-RCe">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <stackView distribution="fillProportionally" orientation="horizontal" alignment="top" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KRM-6U-jFb">
-                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
-                                <subviews>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y3B-8C-FXq" userLabel="Left Image View">
-                                        <rect key="frame" x="0.0" y="0.0" width="225" height="300"/>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="QVM-83-0te"/>
-                                    </imageView>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="35s-eR-h7V" userLabel="Right Image View">
-                                        <rect key="frame" x="225" y="0.0" width="225" height="300"/>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="ntd-M5-DbD"/>
-                                    </imageView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="Y3B-8C-FXq" firstAttribute="width" secondItem="35s-eR-h7V" secondAttribute="width" id="1Zp-Tv-NU1"/>
-                                    <constraint firstItem="Y3B-8C-FXq" firstAttribute="top" secondItem="KRM-6U-jFb" secondAttribute="top" id="JqQ-gt-v4t"/>
-                                    <constraint firstAttribute="bottom" secondItem="35s-eR-h7V" secondAttribute="bottom" id="LbA-rS-CD9"/>
-                                    <constraint firstItem="35s-eR-h7V" firstAttribute="top" secondItem="KRM-6U-jFb" secondAttribute="top" id="dnz-s5-r7W"/>
-                                    <constraint firstAttribute="bottom" secondItem="Y3B-8C-FXq" secondAttribute="bottom" id="zn1-gH-u6E"/>
-                                </constraints>
-                                <visibilityPriorities>
-                                    <integer value="1000"/>
-                                    <integer value="1000"/>
-                                </visibilityPriorities>
-                                <customSpacing>
-                                    <real value="3.4028234663852886e+38"/>
-                                    <real value="3.4028234663852886e+38"/>
-                                </customSpacing>
-                            </stackView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="KRM-6U-jFb" firstAttribute="top" secondItem="ruz-a8-RCe" secondAttribute="top" id="l5s-18-fLC"/>
-                            <constraint firstAttribute="bottom" secondItem="KRM-6U-jFb" secondAttribute="bottom" id="sgJ-uW-16q"/>
-                            <constraint firstItem="KRM-6U-jFb" firstAttribute="leading" secondItem="ruz-a8-RCe" secondAttribute="leading" id="ucn-Xj-z8Z"/>
-                            <constraint firstAttribute="trailing" secondItem="KRM-6U-jFb" secondAttribute="trailing" id="y1r-WG-wt3"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="leftImageView" destination="Y3B-8C-FXq" id="Z4H-Nd-dK5"/>
-                        <outlet property="rightImageView" destination="35s-eR-h7V" id="W1F-hn-Nn2"/>
-                    </connections>
-                </viewController>
-                <customObject id="4UF-Xd-hXM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="60" y="598"/>
         </scene>
     </scenes>
 </document>
